--- a/resources/view/pages/login.html
+++ b/resources/view/pages/login.html
@@ -2,13 +2,15 @@
 <html lang="pt">
 <head>
 	<link rel="shortcut icon" href="public/img/favicon1.png" type="image/x-icon">
+	<link rel="stylesheet" href="public/styles/index.css">
 	<style type="text/css">
 		body{background-color: rgb(172, 216, 209);}
 
 		#corpo{width: 1000px; background-color: aliceblue; margin: 0%;}
 	</style>
+	<style ></style>
     <meta charset="UTF-8">
-	<title>Home</title>
+	<title>Login</title>
 </head>
 <body>
 	<div>
@@ -18,7 +20,7 @@
 
 			<h1>## SysGymIf</h1>
 		</div>
-		<div>
+		<div class="m2">
 			<h3>LOGIN</h3>
 			<label for="name">Nome:</label>
 			<input type="text">
