--- a/resources/view/pages/login.html
+++ b/resources/view/pages/login.html
@@ -21,6 +21,7 @@
 			<h1>## SysGymIf</h1>
 		</div>
 		<div class="m2">
+			<div>
 			<h3>LOGIN</h3>
 			<label for="name">Nome:</label>
 			<input type="text">
@@ -30,6 +31,12 @@
 			<input type="text">
 			<input type="text">
 		</div>
+		<div>
+			<h3>LOGIN</h3>
+			<h1>{{name}}</h1>
+			<h1>{{teste}}</h1>
+		</div>
+	</div>
 	</div>
 </body>
 </html>
