--- a/resources/view/pages/home.html
+++ b/resources/view/pages/home.html
@@ -17,6 +17,8 @@
 			<img src="https://www.educabras.com/media/faculdades/image/ifbaiano.png">
 
 			<h1>## SysGymIf</h1>
+			<h1>{{name}}</h1>
+			<h1>{{teste}}</h1>
 		</div>
 		<div>
 			<h3>LOGIN</h3>
