--- a/resources/view/pages/home.html
+++ b/resources/view/pages/home.html
@@ -19,6 +19,7 @@
 			<h1>## SysGymIf</h1>
 			<h1>{{name}}</h1>
 			<h1>{{teste}}</h1>
+			<a href="resources/view/pages/login.html">Login</a>
 		</div>
 		<div>
 			<h3>LOGIN</h3>
