--- a/resources/view/pages/login2.html
+++ b/resources/view/pages/login2.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
 
 <head>
+	<link rel="shortcut icon" href="public/img/icons/favicon1.png" type="image/x-icon">
+    <meta charset="UTF-8">
+	<title>Login</title>
     <style>
         * {
             margin: 0;
@@ -75,7 +78,9 @@
 
     <form method="post">
 
-        <h3>Login</h3>
+        <h3>Login 
+			<img src="public/img/If.png" alt="">
+		</h3>
         <input type="text" id="email" name="email" placeholder="Digite seu email">
         <input type="password" id="password" name="senha" placeholder="Digite sua senha">
         <input type="submit" name="acao" value="enviar">
