--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #logo {
     align-items: flex-end;
     position: absolute;
-    background-color: rgba(0, 115, 230, 0.4);
+    background-color: rgba(231, 233, 235, 0.4);
     height: 200px;
     width: 200px;
     padding: 400;
@@ -26,7 +26,7 @@ p {
 
 a {
     text-decoration: none;
-    color: rgba(54, 15, 230, 0.911);
+    color: rgba(253, 247, 247, 0.911);
 }
 
 .header {
@@ -63,7 +63,7 @@ a {
 }
 
 body {
-    background-color: #1010cf;
+    background-color: #eeeef1;
     margin-left: auto;
     margin-right: auto;
 }
@@ -84,7 +84,7 @@ form div {
 }
 
 body {
-    background-image: url(./img/academia.jpg);
+    background-image: url('public/img/academia.jpg');
     background-size: 100%;
     border-radius: 15px;
     height: 260px;
@@ -93,7 +93,7 @@ body {
 }
 
 form {
-    background-color: rgb(0, 127, 253);
+    background-color: rgb(231, 233, 235);
     max-width: 500px;
     width: 70%;
     padding: 20px;
@@ -105,21 +105,21 @@ form {
 }
 
 h3 {
-    color: rgb(45, 255, 17);
+    color: #ccc;
 }
 
 img {
     align-items: flex-end;
-    background-color: rgb(233, 10, 10);
-    height: 60px;
-    width: 60px;
+    background-color: white;
+    height: 30px;
+    width: 30px;
 }
 
 form input[type=text],
 form input[type=password] {
     width: 100%;
     height: 45px;
-    border: 1px solid rgb(248, 0, 0);
+    border: 1px solid #ccc;
     padding-left: 10PX;
     margin: 10px 0;
     border-radius: 15px;
@@ -130,7 +130,7 @@ form input[type=submit] {
     height: 40px;
     cursor: pointer;
     background-color: #0a5517;
-    color: rgb(216, 0, 0);
+    color: white;
     border: 0;
     border-radius: 15px;
     transition: 1s;
