--- a/view/Discente/html/DisceTela1.html
+++ b/view/Discente/html/DisceTela1.html
@@ -33,11 +33,10 @@
 			</div><!--academiaDoCampus-->
 
 			<div class="painelDeEscolha">
-				<input type="submit" name="Regulamento" value="Regulamento">
-				<input type="submit" name="Horários" value="Horários">
-				<input type="submit" name="Agendamento" value="Agendamento">
-				<input type="submit" name="Notas" value="Notas">
-
+				<a href=""><button>Regulamento</button></a>
+				<a href="./DisceTela2.html"><button>Horários</button></a>
+				<a href="./DisceTela3.html"><button>Agendamento</button></a>
+				<a href="./DisceTela4.html"><button>Notícias</button></a>
 			</div><!--painelDeEscolha-->
 		</div><!--container-->
 	</section>
