--- a/view/Discente/css/styleTela1.css
+++ b/view/Discente/css/styleTela1.css
@@ -21,7 +21,7 @@ html,body{
 }
 
 .logo-topo{
-	background-image: url('../../../img/logo if.png');
+	background-image: url('../../../public/img/logo if.png');
 	background-size: 100% 100%;
 	height: 100%;
 	width: 174px;
@@ -80,7 +80,7 @@ html,body{
 .painelDeEscolha{
 	display: flex;
 	flex-direction: row;
-	height: 150px;
+	height: 50px;
 	width: 100%;
 }
 .painelDeEscolha input{
@@ -157,7 +157,7 @@ footer .segundoRodaPe .p{
 footer .segundoRodaPe .img-footer1, footer .segundoRodaPe .img-footer2{
 	width: 164.6px;
 	height: 46.3px;
-	background-image: url('../../../img/logo-gov.png');
+	background-image: url('../../../public/img/logo-gov.png');
 	background-size: 100% 100%;
 }
 
@@ -172,3 +172,13 @@ footer .segundoRodaPe .img-footer1, footer .segundoRodaPe .img-footer2{
 		
 	}
 }
+
+
+/* Para Hospedar */
+
+
+.disclaimer {
+
+    display: none;
+}
+
