--- a/public/css/style-global.css
+++ b/public/css/style-global.css
@@ -32,19 +32,24 @@
 }
 .modal-falha label{
 	color: crimson;
+	background-color: rgb(218, 252, 246);
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 }
+
+.modal-falha img{
+	width: 210px;
+}
+
 
 .modal-falha {
 	cursor: pointer;
-	width: 80px;
-	height: 50px;
+	width: 500px;
 	border-radius: 10px;
     left: 32rem;
     z-index: 4;
-	color: white;
 	position: absolute;
-	bottom: 625px;
+	bottom: 125px;
 	font-size: 20px;
 
 }
